2007-09-16  Eric Butler <eric@extremeboredom.net>

	* Base.glade,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/GeneralProjectOptions.cs:
	  Add Default Namespace option
	  Fix some formatting issues in GeneralProjectOptions.cs

2007-09-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.mdp: Fix warning level.
	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs,
	  MonoDevelop.Projects.Gui.Completion/CodeCompletionDataProvider.cs: Add
	  support for ITypeNameResolver.
	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Use the Text not the
	  CompletionText to find entries in the completion window. For example,
	  the completion window may show "ArrayList", while the completion string
	  may be "System.Collections.ArrayList". If the user types 'a', the window
	  should select the ArrayLsit entry.

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/CodeCompletionDataProvider.cs: Added
	  method for finding a ICompletionData instance.

2007-09-13  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/ParameterInformationWindow.cs,
	  MonoDevelop.Projects.Gui.Completion/ParameterInformationWindowManager.cs:
	  Fixed 82205: Can't read autocomplete.

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs: Properly format
	  delegate names.

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs: Close the
	  completion window when pressing the cursor keys with shift or control.
	  Fixes bug #82475.

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs,
	  MonoDevelop.Projects.Gui.Completion/CodeCompletionDataProvider.cs: Added
	  a flag in CodeCompletionData to allow or disallow use of intrinsic type
	  names.

2007-09-04  Michael Hutchinson <MHutchinson@novell.com> 
